using System.Collections;
using UnityEngine;

/// <summary>
/// Boss ì „ìš© ê³µê²© ì‹œìŠ¤í…œ
/// Playerì™€ ì¶©ëŒ ì‹œ ê³µê²© ëª¨ì…˜ ì¬ìƒ ë° ë°ë¯¸ì§€
/// </summary>
public class BossAttack : MonoBehaviour
{
    [Header("Attack Settings")]
    [SerializeField] private int damage = 20;
    [SerializeField] private float attackCooldown = 2.0f; // Boss ê³µê²© ì¿¨ë‹¤ìš´

    [Header("Attack Animation")]
    [SerializeField] private float attackDuration = 0.5f; // ê³µê²© ì• ë‹ˆë©”ì´ì…˜ ì§€ì† ì‹œê°„

    private float lastAttackTime = -999f;
    private Animator anim;
    private EnemyAI enemyAI;
    private BossWakeUp bossWakeUp; // Boss ê¹¨ì–´ë‚¨ ìƒíƒœ í™•ì¸ìš©
    private bool isAttacking = false; // ê³µê²© ì¤‘ì¸ì§€ ì—¬ë¶€

    private void Awake()
    {
        anim = GetComponent<Animator>();
        enemyAI = GetComponent<EnemyAI>();
        bossWakeUp = GetComponent<BossWakeUp>(); // BossWakeUp ìŠ¤í¬ë¦½íŠ¸ ê°€ì ¸ì˜¤ê¸° (ì—†ìœ¼ë©´ null)

        if (anim == null)
            Debug.LogWarning($"âš  BossAttack ({gameObject.name}): Animatorë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤.");
        if (enemyAI == null)
            Debug.LogWarning($"âš  BossAttack ({gameObject.name}): EnemyAIë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤.");
    }

    private void OnCollisionEnter2D(Collision2D collision)
    {
        Debug.Log($"ğŸ”µ BossAttack ({gameObject.name}): OnCollisionEnter2D - ì¶©ëŒ ê°ì§€ë¨! Target: {collision.gameObject.name}, Tag: {collision.gameObject.tag}");
        TryAttack(collision.gameObject);
    }

    private void OnTriggerEnter2D(Collider2D other)
    {
        Debug.Log($"ğŸ”µ BossAttack ({gameObject.name}): OnTriggerEnter2D - íŠ¸ë¦¬ê±° ê°ì§€ë¨! Target: {other.gameObject.name}, Tag: {other.gameObject.tag}");
        TryAttack(other.gameObject);
    }

    private void TryAttack(GameObject target)
    {
        Debug.Log($"ğŸ¯ BossAttack ({gameObject.name}): TryAttack í˜¸ì¶œë¨! Target: {target.name}");

        // Bossê°€ ì•„ì§ ê¹¨ì–´ë‚˜ì§€ ì•Šì•˜ìœ¼ë©´ ê³µê²©í•˜ì§€ ì•ŠìŒ
        if (bossWakeUp != null && !bossWakeUp.HasWokenUp())
        {
            Debug.Log($"ğŸ˜´ BossAttack ({gameObject.name}): Bossê°€ ì•„ì§ ê¹¨ì–´ë‚˜ì§€ ì•Šì•„ì„œ ê³µê²©í•˜ì§€ ì•ŠìŒ");
            return;
        }

        // ì¿¨ë‹¤ìš´ ì²´í¬
        if (Time.time < lastAttackTime + attackCooldown)
        {
            Debug.Log($"â±ï¸ BossAttack ({gameObject.name}): ì¿¨ë‹¤ìš´ ì¤‘! (ë‚¨ì€ ì‹œê°„: {(lastAttackTime + attackCooldown - Time.time):F2}ì´ˆ)");
            return;
        }

        // ê³µê²© ì¤‘ì´ë©´ íŒ¨ìŠ¤
        if (isAttacking)
        {
            Debug.Log($"âš”ï¸ BossAttack ({gameObject.name}): ì´ë¯¸ ê³µê²© ì¤‘!");
            return;
        }

        // Player íƒœê·¸ ì²´í¬
        if (!target.CompareTag("Player"))
        {
            Debug.Log($"âŒ BossAttack ({gameObject.name}): Player íƒœê·¸ê°€ ì•„ë‹˜! (Tag: {target.tag})");
            return;
        }

        Debug.Log($"âœ… BossAttack ({gameObject.name}): ê³µê²© ì¡°ê±´ í†µê³¼! ê³µê²© ì‹œì‘");
        StartCoroutine(PerformAttack(target));
    }

    private IEnumerator PerformAttack(GameObject target)
    {
        isAttacking = true;
        lastAttackTime = Time.time;

        Debug.Log($"âš”ï¸ BossAttack ({gameObject.name}): ê³µê²© ì‹œì‘!");

        // ğŸ¬ ê³µê²© ì• ë‹ˆë©”ì´ì…˜ ì¬ìƒ
        if (anim != null && enemyAI != null)
        {
            anim.SetTrigger("Attack");

            // ê³µê²© ë°©í–¥ì„ 4ë°©í–¥ìœ¼ë¡œ ìŠ¤ëƒ… (ìì—°ìŠ¤ëŸ¬ìš´ ì „í™˜)
            Vector2 snappedDir = enemyAI.SnapToFourDirection(enemyAI.GetLastMoveDirection());
            anim.SetFloat("MoveX", snappedDir.x);
            anim.SetFloat("MoveY", snappedDir.y);

            Debug.Log($"âœ… BossAttack ({gameObject.name}): ê³µê²© ì• ë‹ˆë©”ì´ì…˜ íŠ¸ë¦¬ê±° ë°œë™! ë°©í–¥: ({snappedDir.x}, {snappedDir.y})");
        }
        else
        {
            Debug.LogWarning($"âš ï¸ BossAttack ({gameObject.name}): ì• ë‹ˆë©”ì´ì…˜ ì¬ìƒ ì‹¤íŒ¨! anim: {(anim != null)}, enemyAI: {(enemyAI != null)}");
        }

        // ğŸ’¥ Playerì—ê²Œ ë°ë¯¸ì§€ ì ìš©
        var ph = target.GetComponent<PlayerHealth>() ?? target.GetComponentInParent<PlayerHealth>();
        if (ph != null)
        {
            ph.TakeDamage(damage);
            Debug.Log($"ğŸ’¥ BossAttack ({gameObject.name}): Playerì—ê²Œ {damage} ë°ë¯¸ì§€ ì ìš©!");
        }
        else
        {
            Debug.LogWarning($"âš ï¸ BossAttack ({gameObject.name}): PlayerHealthë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤.");
        }

        // ê³µê²© ì§€ì† ì‹œê°„ ëŒ€ê¸° (ì• ë‹ˆë©”ì´ì…˜ ì¬ìƒ ì‹œê°„)
        yield return new WaitForSeconds(attackDuration);

        isAttacking = false;
        Debug.Log($"âœ… BossAttack ({gameObject.name}): ê³µê²© ì¢…ë£Œ");
    }
}
