// ...existing code...
using UnityEngine;

public class EnemyAttack : MonoBehaviour
{
    [Header("Attack Settings")]
    [SerializeField] private int damage = 10;
    [SerializeField] private float hitCooldown = 0.5f;

    [Header("Attack Animation")]
    [Tooltip("ê³µê²© ì• ë‹ˆë©”ì´ì…˜ ì¬ìƒ ì—¬ë¶€")]
    [SerializeField] private bool playAttackAnimation = true;

    private float lastHitTime = -99f;
    private Animator anim;
    private EnemyAI enemyAI;

    private void Awake()
    {
        anim = GetComponent<Animator>();
        enemyAI = GetComponent<EnemyAI>();

        if (playAttackAnimation && anim == null)
            Debug.LogWarning($"âš  EnemyAttack ({gameObject.name}): Animatorë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤. ê³µê²© ì• ë‹ˆë©”ì´ì…˜ì´ ì¬ìƒë˜ì§€ ì•ŠìŠµë‹ˆë‹¤.");
    }

    private void OnCollisionEnter2D(Collision2D collision)
    {
        Debug.Log($"ğŸ”µ EnemyAttack ({gameObject.name}): OnCollisionEnter2D - ì¶©ëŒ ê°ì§€ë¨! Target: {collision.gameObject.name}, Tag: {collision.gameObject.tag}");
        TryHit(collision.gameObject);
    }

    private void OnTriggerEnter2D(Collider2D other)
    {
        Debug.Log($"ğŸ”µ EnemyAttack ({gameObject.name}): OnTriggerEnter2D - íŠ¸ë¦¬ê±° ê°ì§€ë¨! Target: {other.gameObject.name}, Tag: {other.gameObject.tag}");
        TryHit(other.gameObject);
    }

    private void TryHit(GameObject target)
    {
        Debug.Log($"ğŸ¯ EnemyAttack ({gameObject.name}): TryHit í˜¸ì¶œë¨! Target: {target.name}");

        // ì¿¨ë‹¤ìš´ ì²´í¬
        if (Time.time < lastHitTime + hitCooldown)
        {
            Debug.Log($"â±ï¸ EnemyAttack ({gameObject.name}): ì¿¨ë‹¤ìš´ ì¤‘! (ë‚¨ì€ ì‹œê°„: {(lastHitTime + hitCooldown - Time.time):F2}ì´ˆ)");
            return;
        }

        // Player íƒœê·¸ ì²´í¬
        if (!target.CompareTag("Player"))
        {
            Debug.Log($"âŒ EnemyAttack ({gameObject.name}): Player íƒœê·¸ê°€ ì•„ë‹˜! (Tag: {target.tag})");
            return;
        }

        Debug.Log($"âœ… EnemyAttack ({gameObject.name}): ê³µê²© ì¡°ê±´ í†µê³¼! ë°ë¯¸ì§€ ì ìš© ì‹œì‘");
        lastHitTime = Time.time;

        // ğŸ¬ ê³µê²© ì• ë‹ˆë©”ì´ì…˜ ì¬ìƒ
        if (playAttackAnimation && anim != null && enemyAI != null)
        {
            anim.SetTrigger("Attack");

            // ê³µê²© ë°©í–¥ì„ 4ë°©í–¥ìœ¼ë¡œ ìŠ¤ëƒ… (ìì—°ìŠ¤ëŸ¬ìš´ ì „í™˜)
            Vector2 snappedDir = enemyAI.SnapToFourDirection(enemyAI.GetLastMoveDirection());
            anim.SetFloat("MoveX", snappedDir.x);
            anim.SetFloat("MoveY", snappedDir.y);

            Debug.Log($"âœ… EnemyAttack ({gameObject.name}): ê³µê²© ì• ë‹ˆë©”ì´ì…˜ íŠ¸ë¦¬ê±° ë°œë™! ë°©í–¥: ({snappedDir.x}, {snappedDir.y})");
        }
        else
        {
            Debug.LogWarning($"âš ï¸ EnemyAttack ({gameObject.name}): ì• ë‹ˆë©”ì´ì…˜ ì¬ìƒ ì‹¤íŒ¨! playAttackAnimation: {playAttackAnimation}, anim: {(anim != null)}, enemyAI: {(enemyAI != null)}");
        }

        // í”Œë ˆì´ì–´ì—ê²Œ ë°ë¯¸ì§€
        var ph = target.GetComponent<PlayerHealth>() ?? target.GetComponentInParent<PlayerHealth>();
        if (ph != null)
        {
            ph.TakeDamage(damage);
            Debug.Log($"ğŸ’¥ EnemyAttack ({gameObject.name}): Playerì—ê²Œ {damage} ë°ë¯¸ì§€ ì ìš©!");
        }
        else
        {
            Debug.LogWarning($"âš ï¸ EnemyAttack ({gameObject.name}): PlayerHealth component not found on Player object.");
        }
    }
}
// ...existing code...